[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = "0.29.3"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.118"
rocket = {version = "0.5.1", features = ["json"]}
reqwest = {version = "0.12.5", features = ["json"]}
tokio = {version = "1.38.0", features = ["full"]}
tokio-cron-scheduler = "0.13.0"
rocket_cors = "0.6.0"
dotenv = "0.15.0"