[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = {version = "0.21.0", features = ["csr"]}
web-sys = "0.3.69"
reqwest = {version = "0.12.5", features = ["json"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.118"
wasm-bindgen-futures = "0.4.42" 
wasm-bindgen = "0.2"
